# karpentermig

./: .gitignore  README.md  eks_config.csv  karpenter-config.yaml  pyproject.toml  requirements.txt  run_build_package.sh  run_tests.sh  setup.py
dev/: cmd  note
dev/sample/: 1-deploy.yaml  1-karpenter-basic.yaml
notes/: cmd  eks_config.csv  inquiry.py  script.py
src/: test_output.csv
src/karpentermig/: cli.py  discover_cluster.py
src/karpentermig.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/karpentermig/schema/: karpenter-1-0-0.yaml
src/test/: eks_config.csv  test_output.csv
src/test/clusterConfig/: create_cluster_lt.sh  karpentermig-cas-test.yaml  karpentermig-launch-test.yaml  launch-template-cf.yaml
