[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karpentermig"
version = "0.1"
description = "A tool for Karpenter migration"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "questionary",
    "boto3",
    "click",
]

[project.scripts]
karpentermig = "karpentermig.cli:cli"
